k8s/client-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
      - image: taiyo/multi-client
        imagePullPolicy: IfNotPresent
        name: client
        resources: {}
        ports:
          - containerPort: 3000
status: {}
