k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    component: redis
  type: ClusterIP
